--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,12 @@
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"],
-  "rules": {
-    "@typescript-eslint/no-unused-vars": "off"
+    "rules": {
+      "@typescript-eslint/no-unused-vars": [
+        "warn",
+        { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }
+      ]
+    
   }
+  
 }
